--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.2",
   "private": true,
   "dependencies": {
-    "express": "3.1.0",
+    "express": "3.x",
     "passport": "0.1.15",
     "passport-bitbucket": "0.1.2",
     "passport-github": "0.1.3",
@@ -13,8 +13,8 @@
     "socket.io": "0.9.13",
     "gitty": "git://github.com/jwcooper/Gitty.git",
     "jsDAV": "git://github.com/jwcooper/jsDAV.git",
-    "connect": "2.7.3",
-    "connect-redis": "1.x",
+    "connect": "2.x",
+    "connect-redis": "1.4.7",
     "redis": "0.8.2",
     "tty.js": "git://github.com/jwcooper/tty.js.git",
     "validator": "0.4.25",
